--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -64,12 +64,14 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>DoctoralResearcher, Uni-Bonn & Lamarr Institute</b></big></papertitle>
+          <papertitle><big><b>Doctoral Researcher, Uni-Bonn & Lamarr Institute</b></big></papertitle>
           <br>
           12.2025 - Present | Bonn, Germany
           <br>
-          <p align="justify" class="entry-summary">PhD Candidate and Researcher @ Uni Bonn & Lamarr Institute.</p>
-          <p align="justify" class="entry-summary">Research Area: Spatial/Physical AI, Robotic Learing, Open World Understanding.</p>
+          <p align="justify" class="entry-summary" style="margin-bottom:0;">
+            PhD Candidate and Researcher @ Uni Bonn & Lamarr Institute.<br>
+            Research Area: Spatial/Physical AI, Robotic Learing, Open World Understanding.
+          </p>
       </td>
     </tr>
 
@@ -84,8 +86,8 @@
           <br>
           09.2025 - 12.2025 | Stuttgart, Germany
           <br>
-          <p align="justify" class="entry-summary">Research Engineer @ Sereact. </p>
-          <p align="justify" class="entry-summary">Developed transformer based DL models for 9 DoF 3D bounding box estimation.</p>
+          <p align="justify" class="entry-summary">Research Engineer @ Sereact. <br>
+            Developed transformer based DL models for 9 DoF 3D bounding box estimation.</p>
       </td>
     </tr>
 
@@ -100,8 +102,8 @@
           <br>
           03.2025 - 06.2025 | Munich, Germany
           <br>
-          <p align="justify" class="entry-summary">Entrepreneur in Residence @ ANTLER Spring 2025 Cohort.</p>
-          <p align="justify" class="entry-summary">Worked towards building a 3D Gen AI startup for video game development.</p>
+          <p align="justify" class="entry-summary">Entrepreneur in Residence @ ANTLER Spring 2025 Cohort. <br>
+            Worked towards building a 3D Gen AI startup for video game development.</p>
       </td>
     </tr>
 
@@ -116,8 +118,9 @@
           <br>
           04.2023 - 05.2024 | Munich, Germany
           <br>
-          <p align="justify" class="entry-summary">Robotics Research (Internship + MSc Thesis) @ Huawei Munich Research Center. </p>
-          <p align="justify" class="entry-summary">Open World 3D Scene Understanding utilizing foundation models and LLM (IEEE ICRA'25). LiDAR SLAM (Life-Long Localization & Mapping).</p>
+          <p align="justify" class="entry-summary">Robotics Research (Internship + MSc Thesis) @ Huawei Munich Research Center. <br>
+            Open World 3D Scene Understanding utilizing foundation models and LLM (IEEE ICRA'25). <br>
+            LiDAR SLAM (Life-Long Localization & Mapping).</p>
       </td>
     </tr>
 
@@ -132,8 +135,8 @@
           <br>
           07.2020 - 10.2021 | Karachi, Pakistan
           <br>
-          <p align="justify" class="entry-summary">Research Engineer @ National University of Sciences and Technology (PNEC-NUST). </p>
-          <p align="justify" class="entry-summary">Developed autonomous aerial robots — VTOL (vertical-take-off-and-landing) and fixed-wing — and contributed across all phases of development: design, control, simulation, and manufacturing.</p>
+          <p align="justify" class="entry-summary">Research Engineer @ National University of Sciences and Technology (PNEC-NUST). <br>
+            Developed autonomous aerial robots — VTOL (vertical-take-off-and-landing) and fixed-wing — and contributed across all phases of development: design, control, simulation, and manufacturing.</p>
       </td>
     </tr>
 
@@ -148,8 +151,9 @@
           <br>
           07.2019 - 01.2020 | Karachi, Pakistan
           <br>
-          <p align="justify" class="entry-summary">Student Research Assistant @ NED University of Engineering an  d Technology (Mechanical Engineering Department). </p>
-          <p align="justify" class="entry-summary">Numerical modeling and simulation of nanofluids, turbulence, and heat transfer. Co-authored two peer-reviewed journal papers based on research.</p>
+          <p align="justify" class="entry-summary">Student Research Assistant @ NED University of Engineering an  d Technology (Mechanical Engineering Department). <br>
+            Numerical modeling and simulation of nanofluids, turbulence, and heat transfer. <br>
+            Co-authored two peer-reviewed journal papers based on research.</p>
       </td>
     </tr>
   
