--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -127,11 +127,29 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/tum-logo.png' class="logo-image" alt="TUM logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>Student Research Assistant (HiWi), Technical University of Munich</b></big></papertitle>
+          <br>
+          07.2022 - 04.2023 | Munich, Germany
+          <br>
+          <p align="justify" class="entry-summary">Student Research Assistant (HiWi) @ Chair of Computational Modeling & Simulation. <br>
+            Optical process control for additive manufacturing in construction (ISARC'23). <br>
+            Development of a 3D mapping system based on a quadruped robot.</p>
+      </td>
+    </tr>
+    
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
               <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image" alt="NUST logo">
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Research Engineer, National University of Sciences and Technology (NUST)</b></big></papertitle>
+          <papertitle><big><b>Research Engineer, NUST</b></big></papertitle>
           <br>
           07.2020 - 10.2021 | Karachi, Pakistan
           <br>
@@ -147,11 +165,11 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Student Research Assistant, NED University of Engineering and Technology</b></big></papertitle>
+          <papertitle><big><b>Student Researcher, NED-UET</b></big></papertitle>
           <br>
           07.2019 - 01.2020 | Karachi, Pakistan
           <br>
-          <p align="justify" class="entry-summary">Student Research Assistant @ NED University of Engineering an  d Technology (Mechanical Engineering Department). <br>
+          <p align="justify" class="entry-summary">Student Research Assistant @ NED University of Engineering & Technology. <br>
             Numerical modeling and simulation of nanofluids, turbulence, and heat transfer. <br>
             Co-authored two peer-reviewed journal papers based on research.</p>
       </td>
@@ -168,16 +186,7 @@
     
 
 
-        <table class="footer-table">
-            <tr>
-              <td style="padding:0px">
-                <br>
-                <p style="text-align:center;font-size:small;">
-                  Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
-                </p>
-              </td>
-            </tr>
-          </table>
+
           
         </td>
       </tr>
