--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -60,7 +60,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/lamarr-logo-2023.png' class="logo-image" alt="Lamarr Institute logo">
+              <img src='{{ site.baseurl }}/images/lamarr-logo.png' class="logo-image" alt="Lamarr Institute logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -69,8 +69,8 @@
           12.2025 - Present | Bonn, Germany
           <br>
           <p align="justify" class="entry-summary" style="margin-bottom:0;">
-            PhD Candidate and Researcher @ Uni Bonn & Lamarr Institute.<br>
-            Research Area: Spatial/Physical AI, Robotic Learing, Open World Understanding.
+            PhD Candidate and Researcher Assistant @ Uni Bonn & Lamarr Institute.<br>
+            Area of Research - Spatial/Physical AI, Robotic Learing, Open World Understanding.
           </p>
       </td>
     </tr>
@@ -87,14 +87,14 @@
           09.2025 - 12.2025 | Stuttgart, Germany
           <br>
           <p align="justify" class="entry-summary">Research Engineer @ Sereact. <br>
-            Developed transformer based DL models for 9 DoF 3D bounding box estimation.</p>
+            Developed foundation models for 9 DoF 3D bounding box estimation.</p>
       </td>
     </tr>
 
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/antler_logo.png' class="logo-image" alt="Antler logo">
+              <img src='{{ site.baseurl }}/images/antler-logo.png' class="logo-image" alt="Antler logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -103,7 +103,7 @@
           03.2025 - 06.2025 | Munich, Germany
           <br>
           <p align="justify" class="entry-summary">Entrepreneur in Residence @ ANTLER Spring 2025 Cohort. <br>
-            Worked towards building a 3D Gen AI startup for video game development.</p>
+            Building a 3D Gen AI startup for video game development.</p>
       </td>
     </tr>
 
@@ -131,7 +131,7 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Student Research Assistant (HiWi), Technical University of Munich</b></big></papertitle>
+          <papertitle><big><b>Student Researcher (HiWi), TU-Munich</b></big></papertitle>
           <br>
           07.2022 - 04.2023 | Munich, Germany
           <br>
@@ -145,7 +145,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image" alt="NUST logo">
+              <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image logo-image-offset" alt="NUST logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -161,7 +161,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
+              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image logo-image-offset" alt="NED University logo">
           </div>
       </td>
       <td class="entry-content-cell">
