--- a/style.scss
+++ b/style.scss
@@ -396,6 +396,10 @@ p:last-child {
   object-fit: contain;
 }
 
+.logo-image-offset {
+  margin-top: 6px;
+}
+
 .card-image {
   display: block;
   max-width: 100%;
