--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -58,9 +58,11 @@
       <td class="entry-content-cell">
           <papertitle><big><b>PhD, University of Bonn</b></big></papertitle>
           <br>
-          2025 - 2028 (expected) | Bonn, Germany
+          12.2025 - Present | Bonn, Germany
           <br>
-          <p align="justify" class="entry-summary">CS PhD Candidate @ Robotics Perception & Learning Lab.</p>
+          <p align="justify" class="entry-summary">CS PhD Candidate @ Robotics Perception & Learning Lab. <br>
+            Area of Research - Spatial/Physical AI, Robotics Learing, Open World Understanding.
+          </p>
       </td>
     </tr>
 
