--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -60,17 +60,17 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/lamarr-logo.png' class="logo-image" alt="Lamarr Institute logo">
+              <img src='{{ site.baseurl }}/images/lamarr-logo.png' class="logo-image logo-image-offset" alt="Lamarr Institute logo">
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Doctoral Researcher, Uni-Bonn & Lamarr Institute</b></big></papertitle>
+          <papertitle><big><b>Doctoral Researcher, Lamarr Institute</b></big></papertitle>
           <br>
           12.2025 - Present | Bonn, Germany
           <br>
           <p align="justify" class="entry-summary" style="margin-bottom:0;">
-            PhD Candidate and Researcher Assistant @ Uni Bonn & Lamarr Institute.<br>
-            Area of Research - Spatial/Physical AI, Robotic Learing, Open World Understanding.
+            PhD Candidate and Researcher Assistant @ Uni-Bonn & Lamarr Institute.<br>
+            Area of Research - Spatial/Physical AI, Robotics Learing, Open World Understanding.
           </p>
       </td>
     </tr>
@@ -94,7 +94,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/antler-logo.png' class="logo-image" alt="Antler logo">
+              <img src='{{ site.baseurl }}/images/antler-logo.png' class="logo-image logo-image-offset" alt="Antler logo">
           </div>
       </td>
       <td class="entry-content-cell">
