--- a/style.scss
+++ b/style.scss
@@ -227,8 +227,7 @@ p:last-child {
 }
 
 .education-table {
-  padding-left: 12px;
-  width: calc(100% - 12px);
+  margin-left: 18px;
 }
 
 .education-table .entry-logo-cell {
@@ -254,8 +253,7 @@ p:last-child {
 }
 
 .experience-table {
-  padding-left: 12px;
-  width: calc(100% - 12px);
+  margin-left: 18px;
 }
 
 .experience-table .entry-logo-cell {
