--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -154,7 +154,8 @@
           07.2020 - 10.2021 | Karachi, Pakistan
           <br>
           <p align="justify" class="entry-summary">Research Engineer @ National University of Sciences and Technology (PNEC-NUST). <br>
-            Developed autonomous aerial robots — VTOL (vertical-take-off-and-landing) and fixed-wing — and contributed across all phases of development: design, control, simulation, and manufacturing.</p>
+            Developed autonomous aerial robots — VTOL (vertical-take-off-and-landing) and fixed-wing. <br> 
+            Contributed across all phases of development: design, control, simulation, and manufacturing.</p>
       </td>
     </tr>
 
