--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,23 +63,26 @@
               <br>
               
               <p align="justify">
-                Hello, I'm Rafay 👋 — a Master's graduate from the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                with a focus on scientific computing, robotics, and 3D computer vision. 
-                My thesis research explored efficient and scalable methods for <a href="http://opensu3d.github.io/">open-world 3D scene understanding (ICRA'25)</a> using 2D foundation models and LLM.
+                👋 Hi, I'm Rafay, a PhD candidate at the University of Bonn’s 
+                <a href="https://rpl.uni-bonn.de/" target="_blank" rel="noopener noreferrer">Robotics & Perception Lab</a>, 
+                also affiliated with the <a href="https://lamarr.de/" target="_blank" rel="noopener noreferrer">Lamarr Institute</a>. 
+                My research focuses on Spatial/Physical AI, Robot Learning, and Open-World Understanding.
               </p>
               
               <p align="justify">
-                I previously worked as a Robotics Research Intern at the <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei Munich Research Center</a>, focusing on lifelong localization and mapping, and as a Student Research Assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I contributed to robotics and simulation-based projects.
+                I completed my M.Sc. at <a href="https://www.ed.tum.de/en/ed/home-1/">TUM</a>, 
+                My thesis research explored efficient and scalable methods for 
+                <a href="http://opensu3d.github.io/">open-world 3D scene understanding (ICRA’25)</a>, 
+                leveraging 2D foundation models and large language models.
               </p>
               
               <p align="justify">
-                My research interests spans <b>robotics</b>, <b>3D vision</b>, <b>machine learning</b>, and <b>physics simulation</b> — with hands-on experience in developing and deploying research-driven solutions across these domains.
+                Previously, I have worked across academia and industry, contributing to multiple robotics, 3D vision, and simulation-based projects in diverse research and engineering roles.
               </p>
+              
+        
 
-              <p align="justify">
-                I'm currently working on a <a href="https://remesh.space/">3D Gen AI</a> startup, and also consult and collobrate with AI-focused startups.
-                <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer" style="color: purple">Feel free to set up a call</a></i></b></u> — I'm happy to discuss research, startups, robotics, 3D vision, LLMs, or potential collaborations.
-              </p>
+\
               
               <!--p>
                 <span style="color:red;"><b>Open to PhD/R&D Roles - feel free to connect if my work interests you!</b></span>
