--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -56,7 +56,7 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>PhD, University of Bonn</b></big></papertitle>
+          <papertitle><big><b>Ph.D, University of Bonn</b></big></papertitle>
           <br>
           12.2025 - Present | Bonn, Germany
           <br>
