--- a/style.scss
+++ b/style.scss
@@ -145,6 +145,7 @@ span.highlight {
   text-align: justify;
   margin-bottom: 0.5em;
   font-family: 'Lato';
+  list-style: none;
 }
 
 /* Date Colors */
@@ -364,6 +365,7 @@ p:last-child {
   margin-top: 0;
   padding-left: 0;
   list-style-position: inside;
+  list-style: none;
 }
 
 .news-cell {
