--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,14 +66,13 @@
                 👋 Hi, I'm Rafay, a PhD candidate at the University of Bonn’s 
                 <a href="https://rpl.uni-bonn.de/" target="_blank" rel="noopener noreferrer">Robotics & Perception Lab</a>, 
                 also affiliated with the <a href="https://lamarr.de/" target="_blank" rel="noopener noreferrer">Lamarr Institute</a>. 
-                My research focuses on Spatial/Physical AI, Robot Learning, and Open-World Understanding.
+                My research focuses on Robot Learning, Spatial/Physical AI, and Open-World Understanding.
               </p>
               
               <p align="justify">
-                I completed my M.Sc. at <a href="https://www.ed.tum.de/en/ed/home-1/">TUM</a>, 
-                My thesis research explored efficient and scalable methods for 
-                <a href="http://opensu3d.github.io/">open-world 3D scene understanding (ICRA’25)</a>, 
-                leveraging 2D foundation models and large language models.
+                I received my M.Sc. from <a href="https://www.ed.tum.de/en/ed/home-1/">TUM</a>, 
+                my thesis research explored efficient and scalable methods for 
+                <a href="http://opensu3d.github.io/">open-world 3D scene understanding</a> using 2D foundation models and large language models.
               </p>
               
               <p align="justify">
@@ -82,7 +81,7 @@
               
         
 
-\
+
               
               <!--p>
                 <span style="color:red;"><b>Open to PhD/R&D Roles - feel free to connect if my work interests you!</b></span>
@@ -116,7 +115,7 @@
 
 <div id="content-news" class="collapse in">
 <div class="banner-wrap">
-  <img src="images/banner_gif.gif" alt="Fun Banner Gif" class="banner-image">
+  <img src="images/banner2_gif.gif" alt="Fun Banner Gif" class="banner-image">
 </div>
 </div>
 <hr class="soft">
