--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,6 +110,19 @@
         </table>
         <hr class="soft">
 
+<!-- Logo Strip -->
+<div class="logo-strip">
+  <img src="{{ site.baseurl }}/images/Logo_Bonn.png" class="logo-strip-image" alt="University of Bonn logo">
+  <img src="{{ site.baseurl }}/images/lamarr-logo-2023.png" class="logo-strip-image" alt="Lamarr Institute logo">
+  <img src="{{ site.baseurl }}/images/sereact_icon.jpeg" class="logo-strip-image" alt="Sereact logo">
+  <img src="{{ site.baseurl }}/images/antler_logo.png" class="logo-strip-image" alt="Antler logo">
+  <img src="{{ site.baseurl }}/images/huawei-logo.png" class="logo-strip-image" alt="Huawei logo">
+  <img src="{{ site.baseurl }}/images/tum-logo.png" class="logo-strip-image" alt="TUM logo">
+  <img src="{{ site.baseurl }}/images/nust-logo.png" class="logo-strip-image" alt="NUST logo">
+  <img src="{{ site.baseurl }}/images/ned-logo.png" class="logo-strip-image" alt="NED University logo">
+</div>
+<hr class="soft">
+
 
 <!-- Banner -->
 
