--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,41 +110,13 @@
         </table>
         <hr class="soft">
 
-<!-- Logo Strip -->
-<div class="logo-strip">
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/Logo_Bonn.png" class="logo-strip-image" alt="University of Bonn logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/lamarr-logo-2023.png" class="logo-strip-image" alt="Lamarr Institute logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/sereact_icon.jpeg" class="logo-strip-image" alt="Sereact logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/antler-logo.png" class="logo-strip-image" alt="Antler logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/huawei-logo.png" class="logo-strip-image" alt="Huawei logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/tum-logo.png" class="logo-strip-image" alt="TUM logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/nust-logo.png" class="logo-strip-image" alt="NUST logo">
-  </div>
-  <div class="logo-strip-item">
-    <img src="{{ site.baseurl }}/images/ned-logo.png" class="logo-strip-image" alt="NED University logo">
-  </div>
-</div>
-<hr class="soft">
 
 
 <!-- Banner -->
 
 <div id="content-news" class="collapse in">
 <div class="banner-wrap">
-  <img src="images/banner2_gif.gif" alt="Fun Banner Gif" class="banner-image">
+  <img src="images/banner.gif" alt="Fun Banner Gif" class="banner-image">
 </div>
 </div>
 <hr class="soft">
