--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,7 @@
 
 <div id="content-news" class="collapse in">
 <div class="banner-wrap">
-  <img src="images/banner_gif.gif" alt="Fun Banner Gif" class="banner-image">
+  <img src="images/banner2_gif.gif" alt="Fun Banner Gif" class="banner-image">
 </div>
 </div>
 <hr class="soft">
