logo updated and images aranged

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,8 +99,8 @@
             </td>
             <td class="intro-photo-cell">
                 <div class="intro-photo-wrap">  <!-- fine-tune this value -->
-                  <a href="images/dp24of.jpeg">
-                    <img src="images/dp24of.jpeg" class="profile-image hoverZoomLink" alt="profile photo"/>
+                  <a href="images/main/dp24.jpeg">
+                    <img src="images/main/dp24.jpeg" class="profile-image hoverZoomLink" alt="profile photo"/>
                   </a>              
                 </div>
               </td>
@@ -116,7 +116,7 @@
 
 <div id="content-news" class="collapse in">
 <div class="banner-wrap">
-  <img src="images/banner2_gif.gif" alt="Fun Banner Gif" class="banner-image">
+  <img src="images/main/main_gif.gif" alt="Fun Banner Gif" class="banner-image">
 </div>
 </div>
 <hr class="soft">
