--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -52,7 +52,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/Logo_Bonn.png' class="logo-image" alt="University of Bonn logo">
+              <img src='{{ site.baseurl }}/images/logo/unibonn-logo.png' class="logo-image" alt="University of Bonn logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -69,7 +69,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/tum-logo.png' class="logo-image" alt="TUM logo">
+              <img src='{{ site.baseurl }}/images/logo/tum-logo.png' class="logo-image" alt="TUM logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -86,7 +86,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
+              <img src='{{ site.baseurl }}/images/logo/ned-logo.png' class="logo-image" alt="NED University logo">
           </div>
       </td>
       <td class="entry-content-cell">
