--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -78,7 +78,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/sereact_icon.jpeg' class="logo-image" alt="Sereact logo">
+              <img src='{{ site.baseurl }}/images/sereact-logo.jpeg' class="logo-image" alt="Sereact logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -110,7 +110,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/huawei-logo.png' class="logo-image" alt="Huawei logo">
+              <img src='{{ site.baseurl }}/images/logo/huawei-logo.jpeg' class="logo-image" alt="Huawei logo">
           </div>
       </td>
       <td class="entry-content-cell">
