--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -60,7 +60,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/lamarr-logo.png' class="logo-image logo-image-offset" alt="Lamarr Institute logo">
+              <img src='{{ site.baseurl }}/images/logo/lamarr-logo.png' class="logo-image logo-image-offset" alt="Lamarr Institute logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -78,7 +78,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/sereact-logo.jpeg' class="logo-image" alt="Sereact logo">
+              <img src='{{ site.baseurl }}/images/logo/sereact-logo.jpeg' class="logo-image" alt="Sereact logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -94,7 +94,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/antler-logo.png' class="logo-image logo-image-offset" alt="Antler logo">
+              <img src='{{ site.baseurl }}/images/logo/antler-logo.png' class="logo-image logo-image-offset" alt="Antler logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -127,7 +127,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/tum-logo.png' class="logo-image" alt="TUM logo">
+              <img src='{{ site.baseurl }}/images/logo/tum-logo.png' class="logo-image" alt="TUM logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -145,7 +145,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image logo-image-offset" alt="NUST logo">
+              <img src='{{ site.baseurl }}/images/logo/nust-logo.png' class="logo-image logo-image-offset" alt="NUST logo">
           </div>
       </td>
       <td class="entry-content-cell">
@@ -162,7 +162,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image logo-image-offset" alt="NED University logo">
+              <img src='{{ site.baseurl }}/images/logo/ned-logo.png' class="logo-image logo-image-offset" alt="NED University logo">
           </div>
       </td>
       <td class="entry-content-cell">
