--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,38 +64,50 @@
               <br>
               
               <p align="justify">
-                👋 Hi, I'm Rafay, a PhD candidate at the University of Bonn’s 
-                <a href="https://rpl.uni-bonn.de/" target="_blank" rel="noopener noreferrer">Robotics & Perception Lab</a>, 
-                also affiliated with the <a href="https://lamarr.de/" target="_blank" rel="noopener noreferrer">Lamarr Institute</a>. 
-                My research focuses on Robot Learning, Spatial/Physical AI, and Open-World Understanding.
+                Hi, I'm Rafay, PhD candidate at the 
+                <a href="https://rpl.uni-bonn.de/" target="_blank" rel="noopener noreferrer">
+                  Robotics & Perception Lab
+                </a>, 
+                affiliated with 
+                <a href="https://vi.cs.uni-bonn.de/de" target="_blank" rel="noopener noreferrer">
+                  University of Bonn
+                </a> and  
+                <a href="https://lamarr.de/" target="_blank" rel="noopener noreferrer">
+                  Lamarr Institute
+                </a>.
+                My research focuses on Spatial/Physical AI, Robotics, and Open-World Learning.
               </p>
               
               <p align="justify">
-                I received my M.Sc. from <a href="https://www.ed.tum.de/en/ed/home-1/">TUM</a>, 
-                my thesis research explored efficient and scalable methods for 
-                <a href="http://opensu3d.github.io/">open-world 3D scene understanding</a> using 2D foundation models and large language models.
+                Before joining the PhD program, I have worked across academia and industry in diverse research and engineering roles, contributing to a range of related to robotics, 3D vision, and simulation.
+                I completed my M.Sc. from  
+                <a href="https://www.ed.tum.de/ed/startseite/" target="_blank" rel="noopener noreferrer">
+                  Technical University of Munich (TUM)
+                </a>, where I conducted my master’s thesis research in collaboration with the Huawei Munich Research Center, exploring efficient and scalable methods for 
+                <a href="http://opensu3d.github.io/">open-world 3D scene understanding</a> using foundation models and LLMs.
               </p>
-              
               <p align="justify">
-                Previously, I have worked across academia and industry, contributing to multiple robotics, 3D vision, and simulation-based projects in diverse research and engineering roles.
+                
               </p>
-              
-        
 
-
-              
-              <!--p>
-                <span style="color:red;"><b>Open to PhD/R&D Roles - feel free to connect if my work interests you!</b></span>
-              </p-->
-
-              <p style="text-align:center; font-size: 18px; font-weight: 500;">
-                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank"><b>Email</b></a> &nbsp;/&nbsp;
-                <a href="https://github.com/rafaymhddn"><b>GitHub</b></a> &nbsp;/&nbsp;
-                <!--a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;-->
-                <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en"><b>Scholar</b></a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/rafaymhddn/"><b>LinkedIn</b></a> &nbsp;/&nbsp;
-                <a href="https://x.com/rafaymhddn/"><b>X</b></a> 
+              <p align="justify">
+                Feel free to <a href="mailto:rafay.mhddn@gmail.com">email</a> if you want to discuss research, startups, AI (Robotics / CV / LLMs), or want to collaborate. 
               </p>
+
+
+          
+              
+ 
+
+              <div style="text-align:center; font-size: 18px; font-weight: 500;">
+                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank"><b>Email</b></a> &nbsp;.&nbsp;
+                <a href="https://github.com/rafaymhddn"><b>GitHub</b></a> &nbsp;.&nbsp;
+                <!--a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;.&nbsp;-->
+                <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en"><b>Scholar</b></a> &nbsp;.&nbsp;
+                <a href="https://www.linkedin.com/in/rafaymhddn/"><b>LinkedIn</b></a> &nbsp;.&nbsp;
+                <a href="https://x.com/rafaymhddn/"><b>X</b></a>
+              </div>
+
               
             </td>
             <td class="intro-photo-cell">
