--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,11 +75,11 @@
                 <a href="https://lamarr.de/" target="_blank" rel="noopener noreferrer">
                   Lamarr Institute
                 </a>.
-                My research focuses on Spatial/Physical AI, Robotics, and Open-World Learning.
+                My research focuses on Spatial/Physical AI, Robotics and Open-World Learning.
               </p>
               
               <p align="justify">
-                Before joining the PhD program, I have worked across academia and industry in diverse research and engineering roles, contributing to a range of related to robotics, 3D vision, and simulation.
+                Before this, I have worked across academia and industry in diverse research and engineering roles, contributing to a range of related to robotics, 3D vision, and simulation.
                 I completed my M.Sc. from  
                 <a href="https://www.ed.tum.de/ed/startseite/" target="_blank" rel="noopener noreferrer">
                   Technical University of Munich (TUM)
@@ -91,7 +91,7 @@
               </p>
 
               <p align="justify">
-                Feel free to <a href="mailto:rafay.mhddn@gmail.com">email</a> if you want to discuss research, startups, AI (Robotics / CV / LLMs), or want to collaborate. 
+                Feel free to <a href="mailto:rafay.mhddn@gmail.com">Email</a> if you want to discuss research, startups, AI (Robotics / CV / LLMs), or want to collaborate. 
               </p>
 
 
@@ -100,11 +100,11 @@
  
 
               <div style="text-align:center; font-size: 18px; font-weight: 500;">
-                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank"><b>Email</b></a> &nbsp;.&nbsp;
-                <a href="https://github.com/rafaymhddn"><b>GitHub</b></a> &nbsp;.&nbsp;
+                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank"><b>Email</b></a> &nbsp;·&nbsp;
+                <a href="https://github.com/rafaymhddn"><b>GitHub</b></a> &nbsp;·&nbsp;
                 <!--a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;.&nbsp;-->
-                <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en"><b>Scholar</b></a> &nbsp;.&nbsp;
-                <a href="https://www.linkedin.com/in/rafaymhddn/"><b>LinkedIn</b></a> &nbsp;.&nbsp;
+                <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en"><b>Scholar</b></a> &nbsp;·&nbsp;
+                <a href="https://www.linkedin.com/in/rafaymhddn/"><b>LinkedIn</b></a> &nbsp;·&nbsp;
                 <a href="https://x.com/rafaymhddn/"><b>X</b></a>
               </div>
 
@@ -251,27 +251,25 @@
               <td>
                 <p class="contact-block">
                   <b>Rafay Mohiuddin | M.Sc. TUM<br>
-                  📍 Bonn,Germany<br>
-                  ✉️ <a href="mailto:rafay.mhddn@gmail.com">rafay.mhddn[at]gmail.com</a><br>
-                  🔗 <a href="https://linkedin.com/in/rafaymhddn/">linkedin.com/in/rafaymhddn/</a><br>
-                  🌐 <a href="https://rafaymhddn.github.io/">rafaymhddn.github.io/</a>
+                  Bonn,Germany<br>
+                  <a href="mailto:rafay.mhddn@gmail.com">rafay.mhddn[at]gmail.com</a><br>
                 </p>
 
                  <!-- Cal.com Button: opens popup -->
-              <!--
+              
                  <button data-cal-link="rafaymhddn/quickchat"
                  style="background-color: #2d3748; color: white; border: 1px solid #4a5568; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 0.9rem; margin-top: 10px; font-family: sans-serif; font-weight: 500;">
                     📅 Schedule a Quick Chat
                     </button>
-              -->
+              
                   <!-- Cal.com embed script: Initializes Cal and attaches to the button above -->
-              <!--
+              
                   <script type="text/javascript">
                       (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
                       Cal("init", {origin:"https://cal.com"});
                       Cal("ui", {"theme":"dark","hideEventTypeDetails":false,"layout":"month_view"});
                   </script>
-              -->
+              
                 <!-- Cal embed code ends -->
               </td>
             </tr>
