--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -250,16 +250,16 @@
             <tr>
               <td>
                 <p class="contact-block">
-                  <b>Rafay Mohiuddin | M.Sc. TUM<br>
-                  Bonn,Germany<br>
-                  <a href="mailto:rafay.mhddn@gmail.com">rafay.mhddn[at]gmail.com</a><br>
+                  <b>Rafay Mohiuddin<br>
+                  🧭 Bonn,Germany<br>
+                  ✉️ <a href="mailto:rafay.mhddn@gmail.com">rafay.mhddn[at]gmail.com</a><br>
                 </p>
 
                  <!-- Cal.com Button: opens popup -->
               
                  <button data-cal-link="rafaymhddn/quickchat"
                  style="background-color: #2d3748; color: white; border: 1px solid #4a5568; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 0.9rem; margin-top: 10px; font-family: sans-serif; font-weight: 500;">
-                    📅 Schedule a Quick Chat
+                    Schedule a Quick Chat
                     </button>
               
                   <!-- Cal.com embed script: Initializes Cal and attaches to the button above -->
