--- a/style.scss
+++ b/style.scss
@@ -179,6 +179,11 @@ body {
   margin: 0;
   color: var(--text-color);
   line-height: 1.5;
+  /* Scale the entire page to mimic an 80% browser zoom */
+  transform: scale(0.8);
+  transform-origin: top left;
+  width: 125%;
+  overflow-x: hidden;
 }
 
 p {
