--- a/style.scss
+++ b/style.scss
@@ -382,6 +382,8 @@ p:last-child {
   max-width: 95%;
   height: auto;
   display: block;
+  border-radius: 10px;
+  box-shadow: 0 4px 14px rgba(15, 23, 42, 0.12);
 }
 
 .profile-image {
@@ -389,6 +391,7 @@ p:last-child {
   max-width: 100%;
   border-radius: 5%;
   display: block;
+  box-shadow: 0 4px 14px rgba(15, 23, 42, 0.12);
 }
 
 .news-list {
