--- a/style.scss
+++ b/style.scss
@@ -476,10 +476,12 @@ hr.soft {
 .nav-container {
   width: 100%;
   background-color: #ffffff;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 6px 18px rgba(15, 23, 42, 0.12);
   position: sticky;
   top: 0;
   z-index: 1000;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
 }
 
 .nav-menu {
